Revision history for Test-BrewBuild

0.04    - the exec file is now auto-generated with File::Temp, and unlinked
          after use (closes #9)

0.03
        - App::cpanminus now a prereq
        - fixed issue in split in results() (fixes #6)


0.02    2016-02-23
        - implemented Object Oriented approach
        - added _test_file(), returns the test file brew will run (uses
          File::Temp)
        - added t/01-test_file.t
        - added POD (closes #3)
        - version arg now accepts multiple values (closes #1)
        - fixed defined-or to be 5.8 compatible

0.01    2016-02-23
        First version, released on an unsuspecting world.
